some fixes PlayerIsland.java - switch PlayerOnIsland PlayerIslandGenerator.java - fix Path.of to Path.get WorldManager.java - fix multithreading access to instance